# sdvi_neurips

./: README.md  pyproject.toml  run_baselines.py  run_exp_pyro_extension.py  run_gmm_baselines.py  run_gp_baselines.py
baselines_config/: config.yaml
baselines_config/inference_algo/: autonormal_svi.yaml  dcc.yaml  svi.yaml
baselines_config/launcher/: slurm.yaml
conf_pyro_extension/: config.yaml
conf_pyro_extension/launcher/: slurm.yaml
conf_pyro_extension/model/: gp_kernel_learning.yaml  infinite_gmm_d100.yaml  normal_model.yaml  stochastic_infinite_gmm_d100.yaml
conf_pyro_extension/resource_allocation/: successive_halving.yaml
data/gmm/: gmm_data.npz  gmm_data_validation.npz
gmm_baselines_conf/: config.yaml
gmm_baselines_conf/inference_algo/: bbvi.yaml  bbvi_finite.yaml
gp_baselines_conf/: config.yaml
gp_baselines_conf/launcher/: slurm.yaml
models/: abstract_model.py  gmm.py  gp_kernel_learning.py  normal_model.py
models/pyro_extensions/: dcc.py  guides.py  handlers.py  infer.py  resource_allocation.py  util.py
notebooks/: paper_figures.ipynb
scripts/: create_gmm_data.py  make_motivating_example_plot.py
